--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 body{
-    color: red;
+    font-family: 'Open Sans', sans-serif;
 }
-h1{
-    color: blue;
-}
-h2{
-    color: green;
-}
-.para{
-    color: orange;
-}
+
