--- a/style.css
+++ b/style.css
@@ -48,7 +48,14 @@ color: white;
 }
 /* lists */
 
+.list-non-bullet{
+    list-style: none;
+}
+.list-item-inline{
+display: inline;
+padding: 0rem 0.5rem;
 
+}
 
 
 
