--- a/style.css
+++ b/style.css
@@ -1,66 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
 
-:root{
-  --primary-color:#7C3AED;
+:root {
+    --primary-color: #7C3AED;
 }
 
-body{
-  font-family: 'Montserrat', sans-serif;
+body {
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* hr */
-hr{
+hr {
     margin: 2rem 0rem;
 }
+
 /* container */
-.container{
-padding-left: 1rem;
-padding-right: 1rem;
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
 
 }
-.container-center{
-max-width: 600px;
-margin: auto;
+
+.container-center {
+    max-width: 600px;
+    margin: auto;
 }
 
 /* links */
 
-
-
-.link{
+.link {
     text-decoration: none;
     padding: 0.5rem 1rem;
+    color:white
+
 }
 
-.primary-link{
+.primary-link {
 
-   background-color: var(--primary-color);
-border-radius: 0.5rem;
-color: white;
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+   
 }
 
-.secondary-link{
-  color: var(--primary-color);
+.secondary-link {
+    color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
-  
+
 
 }
+
 /* lists */
 
-.list-non-bullet{
+.list-non-bullet {
     list-style: none;
 }
-.list-item-inline{
-display: inline;
-padding: 0rem 0.5rem;
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
 
 }
 
+/* navigation */
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding:1rem;
+    margin: 1rem;
+    border-bottom-left-radius: 1rem;
+}
 
+.nav-brand{
+font-weight: bold;
+font-size: 1.1rem;
 
+}
+.nav-pills{
+    text-align: right;
+}
 
-
-
-
+.navlink{
+    color: white;
+    text-decoration: none;
+    
+}
+.link-active{
+    font-weight: bold;
+}
 
