--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 :root {
     --primary-color: #7C3AED;
+    --dark-gray:#374151;
+    --off-white:#F3F4F6;
 }
 
 body {
@@ -94,8 +96,34 @@ font-size: 1.1rem;
 .hero{
     padding: 2rem;
 }
-.hero-image{
+.hero .hero-image{
     max-width: 350px;
     display: block;
    margin: auto;
+}
+
+.hero .hero-heading {
+    text-align: center;
+    padding-top: 1rem;
+    color: var(--dark-gray);
+    font-size: 1rem;
+    font-weight: bold;
+    margin: auto;
+    
+}
+.hero .hero-heading .heading-inverted{
+    color: var(--primary-color);
+}
+
+/* sections */
+.section{
+    padding: 2rem;
+}
+.section h1{
+    text-align: center;
+   
+}
+
+.ow{
+    background-color: var(--off-white);
 }
