--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ hr {
 .link {
     text-decoration: none;
     padding: 0.5rem 1rem;
-    color:white
+    color:white;
 
 }
 
@@ -126,4 +126,17 @@ font-size: 1.1rem;
 
 .ow{
     background-color: var(--off-white);
+}
+
+/* footer */
+
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+.footer .link{
+    color: white;
 }
