final project is ready ,pushing the completed code

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ hr {
 .link {
     text-decoration: none;
     padding: 0.5rem 1rem;
+    color: white;
     
 
 }
@@ -83,7 +84,7 @@ font-size: 1.1rem;
 }
 
 .navlink{
-    font-weight: bold;
+   
     text-decoration: none;
     color: #ffffff;
 
@@ -109,7 +110,7 @@ font-size: 1.1rem;
     text-align: center;
     padding-top: 1rem;
     color: var(--dark-gray);
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: bold;
     margin: auto;
     
