--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     margin: auto;
     display: block;
     font-size: large;
+    padding: 2rem;
+    letter-spacing: normal;
 }
 
 
@@ -67,6 +69,7 @@ hr,br {
 
 
 }
+
 
 /* lists */
 
