updated font size for blogs

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     display: block;
     font-size: large;
     padding: 2rem;
-    letter-spacing: normal;
+    letter-spacing:0ch;
 }
 
 
